--- a/src/SiGen/Views/MainView.axaml
+++ b/src/SiGen/Views/MainView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:SiGen.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="600"
              x:Class="SiGen.Views.MainView"
              x:DataType="vm:MainViewModel"
 			 xmlns:lv="using:SiGen.UI.LayoutViewer"
@@ -16,10 +16,11 @@
   </Design.DataContext>
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="10*" />
+			<RowDefinition Height="*" />
 			<RowDefinition Height="10" />
-			<RowDefinition Height="250" />
+			<RowDefinition Height="300" />
 		</Grid.RowDefinitions>
+
 
 		<lv:LayoutViewer x:Name="SILayoutViewer" Orientation="HorizontalNutRight" Grid.Row="0" />
 
@@ -27,15 +28,26 @@
 
 		<Grid Grid.Row="2">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="2*" />
+				<ColumnDefinition Width="2*" />
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
+			<!--<Expander Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Top" ExpandDirection="Right" IsExpanded="True">
+				<Expander.Header>
+					<StackPanel Orientation="Horizontal" Spacing="8">
+						<controls:SvgIcon SvgImage="/Assets/Icons/StringIcon.svg" Height="24"  />
+						
+					</StackPanel>
 
-			<editors:InstrumentInfoEditorPanel x:Name="InfoPanel" Grid.Column="0"/>
+				</Expander.Header>
+				<editors:InstrumentInfoEditorPanel x:Name="InfoPanel" VerticalAlignment="Top" />
+			</Expander>-->
+			<editors:InstrumentInfoEditorPanel x:Name="InfoPanel" Grid.Column="0" />
 			<editors:ScaleLengthEditorPanel x:Name="ScalePanel" Grid.Column="1" />
-			
+
 		</Grid>
-		
+
 	</Grid>
+
 
 </UserControl>
