--- a/src/SiGen/UI/EditorPanels/ScaleLengthEditorPanel.axaml
+++ b/src/SiGen/UI/EditorPanels/ScaleLengthEditorPanel.axaml
@@ -36,7 +36,7 @@
 					<ComboBox.ItemTemplate>
 						<DataTemplate>
 							<TextBlock Text="{Binding ., Converter={StaticResource ScaleLengthModeToTextConverter}}"
-									   ToolTip.Tip="{Binding ., Converter={StaticResource TooltipConverter}}" />
+									   ToolTip.Tip="{Binding ., Converter={StaticResource TooltipConverter}}" VerticalAlignment="Center" />
 						</DataTemplate>
 					</ComboBox.ItemTemplate>
 				</ComboBox>
