--- a/src/SiGen/Views/MainWindow.axaml
+++ b/src/SiGen/Views/MainWindow.axaml
@@ -8,5 +8,5 @@
         x:Class="SiGen.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="SiGen">
-        <views:MainView />
+	<views:DesktopMainView />
 </Window>
